--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Git practice</title>
 </head>
-<body>
+<body class="container">
+    <img src="image/faruq.png" alt="shobola faruq">
     <form action="">
         <fieldset>
             <legend>Sign in</legend>
